@@ -10,7 +10,6 @@
 
 package org.junit.jupiter.engine.descriptor;
 
-import static java.util.stream.Collectors.toList;
 import static org.assertj.core.api.Assertions.assertThat;
 import static org.junit.jupiter.api.Assertions.assertEquals;
 import static org.junit.jupiter.api.Assertions.assertThrows;
@@ -131,13 +130,14 @@ class LifecycleMethodUtilsTests {
 	}
 
 	private static List<String> namesOf(List<Method> methods) {
-		return methods.stream().map(Method::getName).collect(toList());
+		return methods.stream().map(Method::getName).toList();
 	}
 
 }
 
 class TestCaseWithStandardLifecycle {
 
+	@SuppressWarnings("JUnitMalformedDeclaration")
 	@BeforeAll
 	void one() {
 	}
@@ -158,10 +158,12 @@ class TestCaseWithStandardLifecycle {
 	void twelve() {
 	}
 
+	@SuppressWarnings("JUnitMalformedDeclaration")
 	@AfterAll
 	void five() {
 	}
 
+	@SuppressWarnings("JUnitMalformedDeclaration")
 	@AfterAll
 	void six() {
 	}
@@ -191,21 +193,25 @@ class TestCaseWithLifecyclePerClass {
 
 class TestCaseWithNonVoidLifecyleMethods {
 
+	@SuppressWarnings("JUnitMalformedDeclaration")
 	@BeforeEach
 	String aa() {
 		return null;
 	}
 
+	@SuppressWarnings("JUnitMalformedDeclaration")
 	@AfterEach
 	int bb() {
 		return 1;
 	}
 
+	@SuppressWarnings("JUnitMalformedDeclaration")
 	@BeforeAll
 	Double cc() {
 		return null;
 	}
 
+	@SuppressWarnings("JUnitMalformedDeclaration")
 	@AfterAll
 	String dd() {
 		return "";
